syntax = "proto3";

package drmem;

service DrMem {
    rpc getDeviceInfo(Devices) returns (stream DeviceInfo) {}
    rpc queryDevices(DeviceFilter) returns (Devices) {}
    rpc requestData(DeviceRequest) returns (DeviceData) {}
}

message DateRange {
    int64 beginDate = 1;
    optional int64 endDate = 2;
}

message Devices {
    repeated string name = 1;
}

message DeviceInfo {
    string name = 1;
    string units = 2;
    string description = 3;
}

message DeviceFilter {
    string pattern = 1;
}

message DeviceRequest {
    repeated string device = 1;
    optional DateRange range = 2;
}

message DeviceData {
    string device = 1;
    int64 stamp = 2;
    double value = 3;
}
